# PI-Ransomware

./: CrypPy_signature.cpp  Multithreaded_Chi_Squared.cpp  PI_DiskAnalyzer.cpp  PI_Universal_Detector.cpp  PintoolExemple1.cpp  README.md  Vipasana_Signature.cpp  parcours.cpp
HiddenTear/: Hidden_Tear_BruteForce.cs  Hidden_Tear_Network_Recovery.cs
Mercenne twister/: CrypyRecover.cpp  CrypyRecover.h  Matrice.cpp  Matrice.h  MercenneSlayer.cpp  MercenneSlayer.h  extensions.json  main.cpp  makefile  utile.cpp  utile.h
Mercenne twister/tests/: X  \__SINTA I LOVE YOU__\mBavP8nS5Ci9gyEVcjcHTfZeB5USEFLO9LVK.sinta  chiffre  crypy.py  exempleEtat  fichier.txt  test.py
Mercenne twister/tests/Documents save/Visual Studio 2010/Projects/Empty_project/: CMakeLists.txt
Mercenne twister/tests/Documents/Visual Studio 2010/Projects/Empty_project/src/: CMakeLists.txt
Multithreaded_Test_Files/: Copie de vipa_big.txt  email-Johnmen.24@aol.com.ver-CL 1.2.0.0.id-QMCRJYODTJYNDSIXNCRGWLBQGVLZQEUJZOET-16@01@2019 14@15@037221765.randomname-BIEZZTNJEYTNIDYSNICXSMHBWRLGCW.SNI.cbf  email-JohnmenII  test.txt.locked
Programme_principal/: Analyzer.cpp  Analyzer.h  Analyzer_Chi_Squared.cpp  Analyzer_Chi_Squared.h  Analyzer_Vipasana.cpp  Analyzer_Vipasana.h  PI_DiskAnalyzer.cpp  README.txt  Vipasana_Signature.cpp  Vipasana_Signature.h  etude.h  multithreadchisquared.cpp  multithreadchisquared.h  multithreading.cpp  multithreading.h  utile.h
Programme_principal/analyzers/: Analyzer.h  Analyzer_Chi_Squared.cpp  Analyzer_Chi_Squared.h  Analyzer_Crypy.cpp  Analyzer_Crypy.h  Analyzer_HiddenTear.cpp  Analyzer_HiddenTear.h  Analyzer_Vipasana.cpp  Analyzer_Vipasana.h  Pcap_Investigator.cpp  Pcap_Investigator.h
Programme_principal/recoverers/: CrypyRecover.cpp  CrypyRecover.h  HiddenTearRecoverer.cpp  HiddenTearRecoverer.h  Matrice.cpp  Matrice.h  MercenneSlayer.cpp  MercenneSlayer.h  VipasanaRecover.cpp  VipasanaRecover.h  etude.cpp  utile.cpp  utile.h
Programme_principal/tools/: menu.cpp  menu.h  multithreading.cpp  multithreading.h
Signatures/: CrypPy_signature.cpp
Vipasana/: VipasanaAnalyser.cpp  VipasanaAnalyser.h  etude.h  main.cpp  makefile  utile.cpp  utile.h
Vipasana/Tests/: NEWS.txt  newsciph_chiffre.cbf
environnement_test/chiffré vipasana/: MOCK_DATA - Copie (3).sql  MOCK_DATA - Copie.json  dataMar-4-2019 - Copie (2).sql  dataMar-4-2019.json  email-Johnmen.24@aol.com.ver-CL 1.2.0.0.id-YHOUCJQWEKRYXDJOUAFLQWCHNTYDJPVAGMRW-04@03@2019 18@50@04156902.randomname-AHMRXCHMRWBGLRVAFKQVAEJPUZEJOT.YEJ.cbf  email-Johnmen.24@aol.com.ver-CL 1.2.0.0.id-YHOUCJQWEKRYXDJOUAFLQWCHNTYDJPVAGMRW-04@03@2019 18@50@04156902.randomname-AHNTOVCIPWCJQWDKQXDKRYELRYELRZ.FMS.cbf  email-Johnmen.24@aol.com.ver-CL 1.2.0.0.id-YHOUCJQWEKRYXDJOUAFLQWCHNTYDJPVAGMRW-04@03@2019 18@50@04156902.randomname-AHOTBGNTDJPTZEKPUZFKLLGMSXCJYE.KQW.cbf  email-Johnmen.24@aol.com.ver-CL 1.2.0.0.id-YHOUCJQWEKRYXDJOUAFLQWCHNTYDJPVAGMRW-04@03@2019 18@50@04156902.randomname-AJQXFNUBIPXDLSYGNUBIQWELRZGNUB.JQX.cbf  email-Johnmen.24@aol.com.ver-CL 1.2.0.0.id-YHOUCJQWEKRYXDJOUAFLQWCHNTYDJPVAGMRW-04@03@2019 18@50@04156902.randomname-BINTZEKOUZEKPUZEKPUZFKPUZEKPVZ.FKQ.cbf  email-Johnmen.24@aol.com.ver-CL 1.2.0.0.id-YHOUCJQWEKRYXDJOUAFLQWCHNTYDJPVAGMRW-04@03@2019 18@50@04156902.randomname-BIPUBHMSYDIOUAFLRWCINTZEKPVBGM.SXD.cbf  email-Johnmen.24@aol.com.ver-CL 1.2.0.0.id-YHOUCJQWEKRYXDJOUAFLQWCHNTYDJPVAGMRW-04@03@2019 18@50@04156902.randomname-BJPWRYFLSZFMTZGMTAGNTAGNUBHOUB.IPV.cbf  email-Johnmen.24@aol.com.ver-CL 1.2.0.0.id-YHOUCJQWEKRYXDJOUAFLQWCHNTYDJPVAGMRW-04@03@2019 18@50@04156902.randomname-BKQXPXCIPUAGMRXDIOUAFLRWCIOTZF.LRX.cbf  email-Johnmen.24@aol.com.ver-CL 1.2.0.0.id-YHOUCJQWEKRYXDJOUAFLQWCHNTYDJPVAGMRW-04@03@2019 18@50@04156902.randomname-BMWEMSAGOVCJQDWEMSYELQXDJPVBIN.UAG.cbf  email-Johnmen.24@aol.com.ver-CL 1.2.0.0.id-YHOUCJQWEKRYXDJOUAFLQWCHNTYDJPVAGMRW-04@03@2019 18@50@04156902.randomname-CKQXELRYFMSZFMSZGNTAGNTAGNTAHO.UBH.cbf  email-Johnmen.24@aol.com.ver-CL 1.2.0.0.id-YHOUCJQWEKRYXDJOUAFLQWCHNTYDJPVAGMRW-04@03@2019 18@50@04156902.randomname-CKRXELRYELSZFMSZGMTZGMTZHNUAHN.VBI.cbf  email-Johnmen.24@aol.com.ver-CL 1.2.0.0.id-YHOUCJQWEKRYXDJOUAFLQWCHNTYDJPVAGMRW-04@03@2019 18@50@04156902.randomname-CLRYGMTZGMTAGNUAHNUBHOUBIPVCIP.WCJ.cbf  email-Johnmen.24@aol.com.ver-CL 1.2.0.0.id-YHOUCJQWEKRYXDJOUAFLQWCHNTYDJPVAGMRW-04@03@2019 18@50@04156902.randomname-DLCIKQXELRYELRYEMSZFMSZFNTAGNT.BHO.cbf  email-Johnmen.24@aol.com.ver-CL 1.2.0.0.id-YHOUCJQWEKRYXDJOUAFLQWCHNTYDJPVAGMRW-04@03@2019 18@50@04156902.randomname-DLRYAHOVBIPVCJPWDJQWDKQXEKRXEL.SZH.cbf  email-Johnmen.24@aol.com.ver-CL 1.2.0.0.id-YHOUCJQWEKRYXDJOUAFLQWCHNTYDJPVAGMRW-04@03@2019 18@50@04156902.randomname-DMTAAHOUBIOVCIPWCJPWCJPXDJPVBG.MSY.cbf  email-Johnmen.24@aol.com.ver-CL 1.2.0.0.id-YHOUCJQWEKRYXDJOUAFLQWCHNTYDJPVAGMRW-04@03@2019 18@50@04156902.randomname-DMUAINUZGXDMTYQVCINTZFKQWCIOUA.GLS.cbf  email-Johnmen.24@aol.com.ver-CL 1.2.0.0.id-YHOUCJQWEKRYXDJOUAFLQWCHNTYDJPVAGMRW-04@03@2019 18@50@04156902.randomname-EKQWBHMSXCINTXDIOTYDJOUYEJPUZE.KQV.cbf  email-Johnmen.24@aol.com.ver-CL 1.2.0.0.id-YHOUCJQWEKRYXDJOUAFLQWCHNTYDJPVAGMRW-04@03@2019 18@50@04156902.randomname-EMTZPWDKSZGNUBIPWCJQXELRZFMTZG.NVB.cbf  email-Johnmen.24@aol.com.ver-CL 1.2.0.0.id-YHOUCJQWEKRYXDJOUAFLQWCHNTYDJPVAGMRW-04@03@2019 18@50@04156902.randomname-ENVCUCJQXELSZGNUCIPXDLRZGMUBIP.WEL.cbf  email-Johnmen.24@aol.com.ver-CL 1.2.0.0.id-YHOUCJQWEKRYXDJOUAFLQWCHNTYDJPVAGMRW-04@03@2019 18@50@04156902.randomname-FMSXEKPVBHLRXDIOUZFKQVBHNSYEJO.VBG.cbf  email-Johnmen.24@aol.com.ver-CL 1.2.0.0.id-YHOUCJQWEKRYXDJOUAFLQWCHNTYDJPVAGMRW-04@03@2019 18@50@04156902.randomname-FOVCHOUCIPVCIPVDJQWDJQWEKRXEKR.YFL.cbf  email-Johnmen.24@aol.com.ver-CL 1.2.0.0.id-YHOUCJQWEKRYXDJOUAFLQWCHNTYDJPVAGMRW-04@03@2019 18@50@04156902.randomname-GPXEMSZFNTAGNTAHOUBHOUBIPVCIPW.DJQ.cbf  email-Johnmen.24@aol.com.ver-CL 1.2.0.0.id-YHOUCJQWEKRYXDJOUAFLQWCHNTYDJPVAGMRW-04@03@2019 18@50@04156902.randomname-HNTYEJPUAFKPVAGKQVBGLQWBHLRWCH.MSX.cbf  (+56 more)
environnement_test/clair/: Nouveau dossier.rar  Sociable - Copie (2).txt  dataset.xml  thatknow.txt  (+5 more)
(+7351 files in other folders)
